--- a/.gitignore
+++ b/.gitignore
@@ -137,4 +137,12 @@ vignettes/*.pdf
 # R package: bookdown caching files
 /*_files/
 
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,r,cmake
