--- a/.gitignore
+++ b/.gitignore
@@ -137,12 +137,14 @@ vignettes/*.pdf
 # R package: bookdown caching files
 /*_files/
 
-### vscode ###
+### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json
 *.code-workspace
 
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,r,cmake
