substitute add_defintions by target_compile_defintions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 list(APPEND CMAKE_MODULE_PATH "${POET_SOURCE_DIR}/CMake")
 
-set(GCC_CXX_FLAGS "-D STRICT_R_HEADERS")
-add_definitions(${GCC_CXX_FLAGS})
+# set(GCC_CXX_FLAGS "-D STRICT_R_HEADERS")
+# add_definitions(${GCC_CXX_FLAGS})
 
 find_package(MPI REQUIRED)
 
