added DHT_statistics option + fix depencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(poet kin.cpp)
-target_link_libraries(poet PRIVATE POET_Model POET_Util)
+target_link_libraries(poet PRIVATE POET_Model POET_Util MPI::MPI_C)
+target_compile_definitions(poet PRIVATE OMPI_SKIP_MPICXX)
 
 add_subdirectory(DHT)
 add_subdirectory(model)
