rename kin.cpp to poet.cpp + cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(poet kin.cpp)
+add_executable(poet poet.cpp)
 target_link_libraries(poet PRIVATE POET_Model POET_Util MPI::MPI_C)
 target_compile_definitions(poet PRIVATE OMPI_SKIP_MPICXX)
 
