--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
+configure_file(poet.h.in poet.h)
+
 add_executable(poet poet.cpp)
+target_include_directories(poet PUBLIC "${PROJECT_BINARY_DIR}/src")
 target_link_libraries(poet PRIVATE POET_Model POET_Util MPI::MPI_C)
 target_compile_definitions(poet PRIVATE OMPI_SKIP_MPICXX)
 
