--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
+set(SRC_CODE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "directory indicating which source code version is used")
 configure_file(poet.h.in poet.h)
 
 add_executable(poet poet.cpp)
-target_include_directories(poet PUBLIC "${PROJECT_BINARY_DIR}/src")
+target_include_directories(poet PUBLIC "${PROJECT_CURRENT_BINARY_DIR}")
 target_link_libraries(poet PUBLIC POET_Model POET_Util MPI::MPI_C)
 target_compile_definitions(poet PRIVATE OMPI_SKIP_MPICXX)
 
