--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Version 3.9+ offers new MPI package variables
 cmake_minimum_required(VERSION 3.9)
 
-project(POET VERSION 0.1 LANGUAGES CXX C)
+project(POET CXX C)
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 14)
@@ -9,10 +9,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
+include("CMake/POET_Scripts.cmake")
 list(APPEND CMAKE_MODULE_PATH "${POET_SOURCE_DIR}/CMake")
 
-# set(GCC_CXX_FLAGS "-D STRICT_R_HEADERS")
-# add_definitions(${GCC_CXX_FLAGS})
+# set(GCC_CXX_FLAGS "-D STRICT_R_HEADERS") add_definitions(${GCC_CXX_FLAGS})
 
 find_package(MPI REQUIRED)
 
