--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,13 @@
-set(SRC_CODE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "directory indicating which source code version is used")
+set(SRC_CODE_DIR
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    CACHE INTERNAL "directory indicating which source code version is used")
+
+get_poet_version()
+
 configure_file(poet.h.in poet.h)
 
 add_executable(poet poet.cpp)
-target_include_directories(poet PUBLIC "${PROJECT_CURRENT_BINARY_DIR}")
+target_include_directories(poet PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
 target_link_libraries(poet PUBLIC POET_Model POET_Util MPI::MPI_C)
 target_compile_definitions(poet PRIVATE OMPI_SKIP_MPICXX)
 
