build: move headers to `include`
build: instead of several libraries, build one lib and link to poet
application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(RInside REQUIRED)
 add_subdirectory(src)
 add_subdirectory(R_lib)
 add_subdirectory(data)
+add_subdirectory(app)
 
 option(BUILD_DOC "Build documentation with doxygen" ON)
 
