feat: Add phreeqcrm as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "ext/tug"]
 	path = ext/tug
 	url = ../../sec34/tug.git
+
+[submodule "ext/phreeqcrm"]
+	path = ext/phreeqcrm
+	url = ../../mluebke/phreeqcrm-gfz.git
