chore: remove unusable input script from install macro

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,1 +1,6 @@
-install(FILES SimDol2D.R SimDol2D_diffu.R SimDol1D_diffu.R DESTINATION data)
+install(
+FILES
+    SimDol2D_diffu.R
+    SimDol1D_diffu.R
+DESTINATION
+    data)
