--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,5 +28,5 @@ build-poet:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - mkdir build && cd build
-    - cmake -DBUILD_DOC=OFF ..
+    - cmake ..
     - make -j$(nproc)
