--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(src)
 add_subdirectory(R_lib)
 add_subdirectory(data)
 add_subdirectory(app)
+add_subdirectory(bench/dolo_diffu_inner)
 
 add_subdirectory(ext/tug EXCLUDE_FROM_ALL)
 add_subdirectory(ext/phreeqcrm EXCLUDE_FROM_ALL)
