--- a/app/poet.h.in
+++ b/app/poet.h.in
@@ -1,6 +1,10 @@
 #ifndef POET_H
 #define POET_H
 
+#include "poet/ChemistryModule.hpp"
+#include <Rcpp.h>
 const char *poet_version = "@POET_VERSION@";
+
+const char *CHEMISTRY_MODULE_NAME = "state_C";
 
 #endif // POET_H
