feat: add Field data structure as substitution of field declaration using std::vector

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(DataStructures)
+
 file(GLOB poet_lib_SRC
   CONFIGURE_DEPENDS
   "*.cpp" "*.c")
@@ -10,7 +12,7 @@ option(POET_DHT_DEBUG "Build with DHT debug info" OFF)
 add_library(poet_lib ${poet_lib_SRC})
 target_include_directories(poet_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(poet_lib PUBLIC
-  MPI::MPI_C ${MATH_LIBRARY} ${CRYPTO_LIBRARY} RRuntime tug PhreeqcRM)
+  MPI::MPI_C ${MATH_LIBRARY} ${CRYPTO_LIBRARY} RRuntime tug PhreeqcRM DataStructures)
 target_compile_definitions(poet_lib PUBLIC STRICT_R_HEADERS OMPI_SKIP_MPICXX)
 
 if(POET_DHT_DEBUG)
