--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "ext/phreeqcrm"]
 	path = ext/phreeqcrm
 	url = ../../mluebke/phreeqcrm-gfz.git
+[submodule "ext/doctest"]
+	path = ext/doctest
+	url = https://github.com/doctest/doctest.git
