chore: add 'test' to commit group

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -17,6 +17,7 @@ options:
          - doc
          - chore
          - ci
+         - test
   commit_groups:
      title_maps:
        feat: Features
@@ -29,6 +30,7 @@ options:
        doc: Documentation
        chore: Householding and Cleanup
        ci: CI
+       test: Software Testing
   header:
     pattern: "^(\\w*)\\:\\s(.*)$"
     pattern_maps:
