ci: add doxygen docs to pipeline and pages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,3 +93,18 @@ release-create:
       links:
         - name: '${SOURCE_ARCHIVE_NAME}'
           url: 'https://git.gfz-potsdam.de/sec34/port/-/jobs/${ARCHIVE_JOB_ID}/artifacts/file/${SOURCE_ARCHIVE_NAME}'
+
+create-docs:
+  stage: release
+  before_script:
+    - apt-get update && apt-get install -y doxygen graphviz
+    - mkdir {public,build}
+  script:
+    - pushd build
+    - cmake .. && make doxygen && ls -alh docs
+    - popd && mv build/docs/html/* public/
+  artifacts:
+    paths:
+      - public
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
