--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -9,6 +9,7 @@ if(DOXYGEN_FOUND)
   set(DOXYGEN_DISABLE_INDEX NO)
   set(DOXYGEN_GENERATE_TREEVIEW YES)
   set(DOXYGEN_FULL_SIDEBAR YES)
+  set(DOXYGEN_PROJECT_NUMBER ${POET_VERSION})
 
   doxygen_add_docs(doxygen
     ${PROJECT_SOURCE_DIR}/include
