--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ stages:          # List of stages for jobs, and their order of execution
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  SOURCE_ARCHIVE_NAME: 'port_${CI_COMMIT_TAG}_sources.tar.gz'
+  SOURCE_ARCHIVE_NAME: 'poet_${CI_COMMIT_TAG}_sources.tar.gz'
   CHANGELOG_FILE: 'commit_changelog.md'
 
 build-poet:       # This job runs in the build stage, which runs first.
@@ -58,6 +58,7 @@ archive-sources:       # This job runs in the build stage, which runs first.
   artifacts:
     paths:
       - ${SOURCE_ARCHIVE_NAME}
+    expire_in: never
     reports:
       dotenv: archives.env
   rules:
@@ -91,12 +92,12 @@ release-create:
       artifacts: true
   release:
     tag_name: $CI_COMMIT_TAG
-    name: 'PORT $CI_COMMIT_TAG'
+    name: 'POET $CI_COMMIT_TAG'
     description: ${CHANGELOG_FILE}
     assets:
       links:
         - name: '${SOURCE_ARCHIVE_NAME}'
-          url: 'https://git.gfz-potsdam.de/sec34/port/-/jobs/${ARCHIVE_JOB_ID}/artifacts/file/${SOURCE_ARCHIVE_NAME}'
+          url: 'https://git.gfz-potsdam.de/naaice/poet/-/jobs/${ARCHIVE_JOB_ID}/artifacts/file/${SOURCE_ARCHIVE_NAME}'
 
 pages:
   stage: release
