--- a/bench/surfex/CMakeLists.txt
+++ b/bench/surfex/CMakeLists.txt
@@ -1,6 +1,8 @@
 install(FILES
-    surfex.R
-    SurfExBase.pqi
+    ExBase.pqi
+    ex.R
+    #surfex.R
+    #SurfExBase.pqi
     SMILE_2021_11_01_TH.dat
 DESTINATION
     share/poet/bench/surfex
