feat: introduce LookupKey and rounding schemes
feat: implement data clustering using PHT

feat: implement interpolation

refactor: use named vector for DHT species definition and significant digits

data: remove unusable input scripts

data: move Phreeqc database to benchmark dir

refactor: rename dolomite benchmark directory

refactor: remove DHT prop type from input script

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,6 @@ file(GLOB_RECURSE poet_lib_SRC
   CONFIGURE_DEPENDS
   "*.cpp" "*.c")
 
-find_library(MATH_LIBRARY m)
-find_library(CRYPTO_LIBRARY crypto)
-
 add_library(poet_lib ${poet_lib_SRC})
 target_include_directories(poet_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(poet_lib PUBLIC
@@ -19,4 +16,10 @@ option(POET_DHT_DEBUG "Build with DHT debug info" OFF)
 
 if(POET_DHT_DEBUG)
   target_compile_definitions(poet_lib PRIVATE DHT_STATISTICS)
+endif()
+
+option(POET_PHT_ADDITIONAL_INFO "Enables additional information in the PHT" OFF)
+
+if (POET_PHT_ADDITIONAL_INFO)
+  target_compile_definitions(poet_lib PRIVATE POET_PHT_ADD)
 endif()
