--- a/bench/dolo/CMakeLists.txt
+++ b/bench/dolo/CMakeLists.txt
@@ -2,6 +2,8 @@ install(FILES
     dolo_diffu_inner.R
     dolo_diffu_inner_large.R
     dolo_inner.pqi
+    dolo_interp_long.R
+    phreeqc_kin.dat
 DESTINATION
     share/poet/bench/dolo
 )
