build: build one poet library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_subdirectory(DataStructures)
-
-file(GLOB poet_lib_SRC
+file(GLOB_RECURSE poet_lib_SRC
   CONFIGURE_DEPENDS
   "*.cpp" "*.c")
 
@@ -10,7 +8,15 @@ find_library(CRYPTO_LIBRARY crypto)
 add_library(poet_lib ${poet_lib_SRC})
 target_include_directories(poet_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(poet_lib PUBLIC
-  MPI::MPI_CXX ${MATH_LIBRARY} RRuntime tug PhreeqcRM DataStructures ChemistryModule)
+  MPI::MPI_CXX ${MATH_LIBRARY} RRuntime PhreeqcRM tug)
+
 target_compile_definitions(poet_lib PUBLIC STRICT_R_HEADERS OMPI_SKIP_MPICXX)
 
-add_subdirectory(ChemistryModule)
+mark_as_advanced(PHREEQCRM_BUILD_MPI PHREEQCRM_DISABLE_OPENMP)
+set(PHREEQCRM_DISABLE_OPENMP ON CACHE BOOL "" FORCE)
+
+option(POET_DHT_DEBUG "Build with DHT debug info" OFF)
+
+if(POET_DHT_DEBUG)
+  target_compile_definitions(poet_lib PRIVATE DHT_STATISTICS)
+endif()
