feat: implement SEXP export of Field structure
feat: implement NamedVector based on Rcpp::NumericVector

feat: remove hard coded checks and substitute by R hook functions,
defined in the input script

refactor: modify API of DHT_Wrapper/InterpolationModule to expect a work
package structure, where input/output values are stored as 2D vectors

test: add tests for NamedVector

test: extend tests for Field

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,10 @@ file(GLOB test_SRC
 add_executable(testPOET ${test_SRC})
 target_link_libraries(testPOET doctest poet_lib)
 
+get_filename_component(TEST_RInsideSourceFile "RInsidePOET_funcs.R" REALPATH)
+configure_file(testDataStructures.hpp.in testDataStructures.hpp)
+target_include_directories(testPOET PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
+
 add_custom_target(check
     COMMAND $<TARGET_FILE:testPOET>
     DEPENDS testPOET
