--- a/bench/dolo/CMakeLists.txt
+++ b/bench/dolo/CMakeLists.txt
@@ -1,8 +1,9 @@
 install(FILES
-    dolo_diffu_inner.R
-    dolo_diffu_inner_large.R
-    dolo_inner.pqi
-    dolo_interp_long.R
+#    dolo_diffu_inner.R
+#    dolo_diffu_inner_large.R
+#    dolo_inner.pqi
+#    dolo_interp_long.R
+    dolo_adv.R
     phreeqc_kin.dat
 DESTINATION
     share/poet/bench/dolo
