add Phreeqc input script to install target

--- a/bench/dolo/CMakeLists.txt
+++ b/bench/dolo/CMakeLists.txt
@@ -1,7 +1,7 @@
 install(FILES
 #    dolo_diffu_inner.R
 #    dolo_diffu_inner_large.R
-#    dolo_inner.pqi
+    dolo_inner.pqi
 #    dolo_interp_long.R
     dolo_adv.R
     phreeqc_kin.dat
